--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "apollo-cache-inmemory": "^1.1.0",
     "apollo-client": "^2.0.2",
     "apollo-link": "^1.0.0",
+    "apollo-link-context": "^1.0.1",
     "apollo-link-http": "^1.1.0",
     "graphql": "^0.11.7",
     "graphql-tag": "^2.5.0",
