--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-native-router-flux": "^4.0.0-beta.24",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "jest": {
     "preset": "react-native"
