--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,11 @@
     "react": "^16.0.0",
     "react-apollo": "^2.0.1",
     "react-native": "^0.50.3",
+    "react-native-elements": "^0.18.4",
     "react-native-router-flux": "^4.0.0-beta.24",
+    "react-native-shadow": "^1.2.1",
+    "react-native-svg": "^5.5.1",
+    "react-native-vector-icons": "^4.4.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
